# LogicalLLM

./: .gitignore  analyze_memory.py  compare_models.py  data_loader.py  debug_deltanet.py  download_babi.py  gsm8k_loader.py  hcsf_system.py  inference_demo.py  inspect_data.py  linear_adapter.py  main.py  model_v2.py  models.py  models_append.py  pyproject.toml  test_adapter_structure.py  test_data.py  test_deltanet.py  test_deltanet_simple.py  test_fix.py  test_standard_delta.py  test_syntax.py  train.py  train_hcsf_gsm8k.py  train_v2.py  verify_data.py  verify_loss.py  verify_model.py
.ipynb_checkpoints/: hcsf-checkpoint.py  hcsf_beta-checkpoint.py  model_v2-checkpoint.py  proofwriter_loader-checkpoint.py  train-checkpoint.py  train_v2-checkpoint.py
